@startuml
left to right direction
skinparam linetype ortho
skinparam entity {
  BackgroundColor #F4F6F7
  BorderColor #2C3E50
  FontSize 12
}

entity "Users" as users {
  + id : UUID <<PK>>
  --
  name : varchar
  email : varchar <<unique>>
  password : varchar
  role : ADMIN | ORGANIZER | USER
  created_at : timestamp
}

entity "Events" as events {
  + id : UUID <<PK>>
  --
  title : varchar
  description : text
  location : varchar
  event_date : timestamp
  capacity : int
  status : PENDING | APPROVED | REJECTED
  rejection_reason : text
  closed_at : timestamp <<nullable>>
  organizer_id : UUID <<FK>>
  category_id : UUID <<FK, nullable>>
  subcategory_id : UUID <<FK, nullable>>
}

entity "Categories" as categories {
  + id : UUID <<PK>>
  --
  name : varchar
}

entity "Subcategories" as subcategories {
  + id : UUID <<PK>>
  --
  name : varchar
  category_id : UUID <<FK>>
}

entity "Registrations" as registrations {
  + id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  event_id : UUID <<FK>>
  check_in : boolean
  registered_at : timestamp
}

users ||--o{ events : "organizer"
users ||--o{ registrations : "registers"
events ||--o{ registrations : "has"
categories ||--o{ subcategories : "has"
categories ||--o{ events : "classifies"
subcategories ||--o{ events : "classifies"

@enduml
